adding ieee mt talk

--- a/leili.bib
+++ b/leili.bib
@@ -67,6 +67,22 @@
   eprint  = {https://arxiv.org/abs/2106.15947},
 }
 
+@Patent{he2022video,
+  nationality = {US},
+  number      = {11,455,802 B2},
+  year        = {2022},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {He, Yi and Li, Lei and Yang, Cheng and Li, Gen and Li, Yitan},
+  day         = {27},
+  dayfiled    = {29},
+  month       = sep,
+  monthfiled  = {#dec#},
+  title       = {Video Feature Extraction Method and Device},
+  comment     = {一种视频特征提取方法及装置 CN 201810271774.6  March 29, 2018},
+  owner       = {lilei.02},
+}
+
 @InProceedings{lu2022uncovering,
   author    = {Yunfei Lu and Peng Cui and Linyun Yu and Lei Li and Wenwu Zhu},
   booktitle = {the 28th SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)},
