--- a/leili.bib
+++ b/leili.bib
@@ -1,3 +1,81 @@
+@InProceedings{song2023importance,
+  author    = {Zhenqiao Song and Lei Li},
+  booktitle = {Proceedings of the 40th International Conference on Machine Learning (ICML)},
+  title     = {Importance Weighted Expectation-Maximization for Protein Sequence Design},
+  year      = {2023},
+  month     = jul,
+  abstract  = {Designing protein sequences with desired biological function is crucial in biology and chemistry. Recent machine learning methods use a surrogate sequence-function model to replace the expensive wet-lab validation. How can we efficiently generate diverse and novel protein sequences with high fitness? In this paper, we propose IsEM-Pro, an approach to generate protein sequences towards a given fitness criterion. At its core, IsEM-Pro is a latent generative model, augmented by combinatorial structure features from a separately learned Markov random fields (MRFs). We develop an Monte Carlo Expectation-Maximization method (MCEM) to learn the model. During inference, sampling from its latent space enhances diversity while its MRFs features guide the exploration in high fitness regions. Experiments on eight protein sequence design tasks show that our IsEM-Pro outperforms the previous best methods by at least 55% on average fitness score and generates more diverse and novel protein sequences.},
+  eprint    = {https://arxiv.org/abs/2302.02285},
+}
+
+@InProceedings{zhang2023redi,
+  author    = {Kexun Zhang and Xianjun Yang and William Yang Wang and Lei Li},
+  booktitle = {Proceedings of the 40th International Conference on Machine Learning (ICML)},
+  title     = {{ReDi}: Efficient Learning-Free Diffusion Inference via Trajectory Retrieval},
+  year      = {2023},
+  month     = jul,
+  abstract  = {Diffusion models show promising generation capability for a variety of data. Despite their high generation quality, the inference for diffusion models is still time-consuming due to the numerous sampling iterations required. To accelerate the inference, we propose ReDi, a simple yet learning-free Retrieval-based Diffusion sampling framework. From a precomputed knowledge base, ReDi retrieves a trajectory similar to the partially generated trajectory at an early stage of generation, skips a large portion of intermediate steps, and continues sampling from a later step in the retrieved trajectory. We theoretically prove that the generation performance of ReDi is guaranteed. Our experiments demonstrate that ReDi improves the model inference efficiency by 2x speedup. Furthermore, ReDi is able to generalize well in zero-shot cross-domain image generation such as image stylization.},
+  eprint    = {https://arxiv.org/abs/2302.03162},
+}
+
+@InProceedings{zhao2023protecting,
+  author    = {Xuandong Zhao and Yu-Xiang Wang and Lei Li},
+  booktitle = {Proceedings of the 40th International Conference on Machine Learning (ICML)},
+  title     = {Protecting Language Generation Models via Invisible Watermarking},
+  year      = {2023},
+  month     = jul,
+  abstract  = {Language generation models have been an increasingly powerful enabler for many applications. Many such models offer free or affordable API access, which makes them potentially vulnerable to model extraction attacks through distillation. To protect intellectual property (IP) and ensure fair use of these models, various techniques such as lexical watermarking and synonym replacement have been proposed. However, these methods can be nullified by obvious countermeasures such as "synonym randomization". To address this issue, we propose {GINSEW}, a novel method to protect text generation models from being stolen through distillation. The key idea of our method is to inject secret signals into the probability vector of the decoding steps for each target token. We can then detect the secret message by probing a suspect model to tell if it is distilled from the protected one. Experimental results show that GINSEW can effectively identify instances of IP infringement with minimal impact on the generation quality of protected APIs. Our method demonstrates an absolute improvement of 19 to 29 points on mean average precision (mAP) in detecting suspects compared to previous methods against watermark removal attacks.},
+  eprint    = {https://arxiv.org/abs/2305.00386},
+}
+
+@InProceedings{yuan2023lego,
+  author    = {Fei Yuan and Yinquan Lu and Wenhao Zhu and Lingpeng Kong and Lei Li and Jingjing Xu},
+  booktitle = {the 61st Annual Meeting of the Association for Computational Linguistics - Findings (ACL-Findings)},
+  title     = {{Lego-MT}: Towards Detachable Models in Massively Multilingual Machine Translation},
+  year      = {2023},
+  month     = may,
+  abstract  = {Traditional multilingual neural machine translation (MNMT) uses a single model to translate all directions. However, with the increasing scale of language pairs, simply using a single model for massive MNMT brings new challenges: parameter tension and large computations. In this paper, we revisit multi-way structures by assigning an individual branch for each language (group). Despite being a simple architecture, it is challenging to train de-centralized models due to the lack of constraints to align representations from all languages. We propose a localized training recipe to map different branches into a unified space, resulting in an efficient detachable model, Lego-MT. For a fair comparison, we collect data from OPUS and build the first large-scale open-source translation benchmark covering 7 language-centric data, each containing 445 language pairs. Experiments show that Lego-MT (1.2B) brings gains of more than 4 BLEU while outperforming M2M-100 (12B).},
+  eprint    = {https://arxiv.org/abs/2212.10551},
+}
+
+@InProceedings{chen2023say,
+  author    = {Jiangjie Chen and Wei Shi and Ziquan Fu and Sijie Cheng and Lei Li and Yanghua Xiao},
+  booktitle = {the 61st Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Say What You Mean! Large Language Models Speak Too Positively about Negative Commonsense Knowledge},
+  year      = {2023},
+  month     = may,
+}
+
+@InProceedings{ouyang2023waco,
+  author    = {Siqi Ouyang and Rong Ye and Lei Li},
+  booktitle = {the 61st Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {{WACO}: Word-Aligned Contrastive Learning for Speech Translation},
+  year      = {2023},
+  month     = may,
+  abstract  = {End-to-end Speech Translation (E2E ST) aims to translate source speech into target translation without generating the intermediate transcript. However, existing approaches for E2E ST degrade considerably when only limited ST data are available. We observe that an ST model's performance strongly correlates with its embedding similarity from speech and transcript. In this paper, we propose Word-Aligned COntrastive learning (WACO), a novel method for few-shot speech-to-text translation. Our key idea is bridging word-level representations for both modalities via contrastive learning. We evaluate WACO and other methods on the MuST-C dataset, a widely used ST benchmark. Our experiments demonstrate that WACO outperforms the best baseline methods by 0.7-8.5 BLEU points with only 1-hour parallel data.},
+  eprint    = {https://arxiv.org/abs/2212.09359},
+}
+
+@InProceedings{xu2023sescore2,
+  author    = {Wenda Xu and Xian Qian and Mingxuan Wang and Lei Li and William Yang Wang},
+  booktitle = {the 61st Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {{SEScore2}: Retrieval Augmented Pretraining for Text Generation Evaluation},
+  year      = {2023},
+  month     = may,
+  abstract  = {Is it possible to leverage large scale raw and raw parallel corpora to build a general learned metric? Existing learned metrics have gaps to human judgements, are model-dependent or are limited to the domains or tasks where human ratings are available. In this paper, we propose SEScore2, a model-based metric pretrained over million-scale synthetic dataset constructed by our novel retrieval augmented data synthesis pipeline. SEScore2 achieves high correlation to human judgements without any human rating supervisions. Importantly, our unsupervised SEScore2 can outperform supervised metrics, which are trained on the News human ratings, at the TED domain. We evaluate SEScore2 over four text generation tasks across three languages. SEScore2 outperforms all prior unsupervised evaluation metrics in machine translation, speech translation, data-to-text and dialogue generation, with average Kendall improvements 0.158. SEScore2 even outperforms SOTA supervised BLEURT at data-to-text, dialogue generation and overall correlation.data.},
+  eprint    = {https://arxiv.org/abs/2212.09305},
+}
+
+@InProceedings{zhao2023pre,
+  author    = {Xuandong Zhao and Siqi Ouyang and Zhiguo Yu and Ming Wu and Lei Li},
+  booktitle = {the 61st Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Pre-trained Language Models can be Fully Zero-Shot Learners},
+  year      = {2023},
+  month     = may,
+  abstract  = {How can we extend a pre-trained model to many language understanding tasks, without labeled or additional unlabeled data? Pre-trained language models (PLMs) have been effective for a wide range of NLP tasks. However, existing approaches either require fine-tuning on downstream labeled datasets or manually constructing proper prompts. In this paper, we propose nonparametric prompting PLM (NPPrompt) for fully zero-shot language understanding. Unlike previous methods, NPPrompt uses only pre-trained language models and does not require any labeled data or additional raw corpus for further fine-tuning, nor does it rely on humans to construct a comprehensive set of prompt label words. We evaluate NPPrompt against previous major few-shot and zero-shot learning methods on diverse NLP tasks: including text classification, text entailment, similar text retrieval, and paraphrasing. Experimental results demonstrate that our NPPrompt outperforms the previous best fully zero-shot method by big margins, with absolute gains of 12.8% in accuracy on text classification and 18.9% on the GLUE benchmark.},
+  eprint    = {https://arxiv.org/abs/2212.06950},
+}
+
 @InProceedings{chen2023converge,
   author    = {Jiangjie Chen and Rui Xu and Wenxuan Zeng and Changzhi Sun and Lei Li and Yanghua Xiao},
   booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
