fix paper title error

--- a/leili.bib
+++ b/leili.bib
@@ -45,7 +45,7 @@ focus on peptide sequence attributes and do not consider crucial structure infor
 @InProceedings{yuan2023lego,
   author    = {Fei Yuan and Yinquan Lu and Wenhao Zhu and Lingpeng Kong and Lei Li and Jingjing Xu},
   booktitle = {the 61st Annual Meeting of the Association for Computational Linguistics - Findings (ACL-Findings)},
-  title     = {{Lego-MT}: Towards Detachable Models in Massively Multilingual Machine Translation},
+  title     = {{Lego-MT}: Learning Detachable Models for Massively Multilingual Machine Translation},
   year      = {2023},
   month     = jul,
   abstract  = {Traditional multilingual neural machine translation (MNMT) uses a single model to translate all directions. However, with the increasing scale of language pairs, simply using a single model for massive MNMT brings new challenges: parameter tension and large computations. In this paper, we revisit multi-way structures by assigning an individual branch for each language (group). Despite being a simple architecture, it is challenging to train de-centralized models due to the lack of constraints to align representations from all languages. We propose a localized training recipe to map different branches into a unified space, resulting in an efficient detachable model, Lego-MT. For a fair comparison, we collect data from OPUS and build the first large-scale open-source translation benchmark covering 7 language-centric data, each containing 445 language pairs. Experiments show that Lego-MT (1.2B) brings gains of more than 4 BLEU while outperforming M2M-100 (12B).},
@@ -78,7 +78,7 @@ focus on peptide sequence attributes and do not consider crucial structure infor
 @InProceedings{xu2023sescore2,
   author    = {Wenda Xu and Xian Qian and Mingxuan Wang and Lei Li and William Yang Wang},
   booktitle = {the 61st Annual Meeting of the Association for Computational Linguistics (ACL)},
-  title     = {{SEScore2}: Retrieval Augmented Pretraining for Text Generation Evaluation},
+  title     = {{SESCORE2}: Learning Text Generation Evaluation via Synthesizing Realistic Mistakes},
   year      = {2023},
   month     = jul,
   abstract  = {Is it possible to leverage large scale raw and raw parallel corpora to build a general learned metric? Existing learned metrics have gaps to human judgements, are model-dependent or are limited to the domains or tasks where human ratings are available. In this paper, we propose SEScore2, a model-based metric pretrained over million-scale synthetic dataset constructed by our novel retrieval augmented data synthesis pipeline. SEScore2 achieves high correlation to human judgements without any human rating supervisions. Importantly, our unsupervised SEScore2 can outperform supervised metrics, which are trained on the News human ratings, at the TED domain. We evaluate SEScore2 over four text generation tasks across three languages. SEScore2 outperforms all prior unsupervised evaluation metrics in machine translation, speech translation, data-to-text and dialogue generation, with average Kendall improvements 0.158. SEScore2 even outperforms SOTA supervised BLEURT at data-to-text, dialogue generation and overall correlation.data.},
