--- a/leili.bib
+++ b/leili.bib
@@ -1,3 +1,23 @@
+@InProceedings{zhao2024provable,
+  author    = {Xuandong Zhao and Prabhanjan Vijendra Ananth and Lei Li and Yu-Xiang Wang},
+  booktitle = {International Conference on Learning Representations (ICLR)},
+  title     = {Provable Robust Watermarking for AI-Generated Text},
+  year      = {2024},
+  month     = may,
+  abstract  = {We study the problem of watermarking large language models (LLMs) generated text -- one of the most promising approaches for addressing the safety challenges of LLM usage. In this paper, we propose a rigorous theoretical framework to quantify the effectiveness and robustness of LLM watermarks. We propose a robust and high-quality watermark method, Unigram-Watermark, by extending an existing approach with a simplified fixed grouping strategy. We prove that our watermark method enjoys guaranteed generation quality, correctness in watermark detection, and is robust against text editing and paraphrasing. Experiments on three varying LLMs and two datasets verify that our Unigram-Watermark achieves superior detection accuracy and comparable generation quality in perplexity, thus promoting the responsible use of LLMs.},
+  code      = {https://github.com/XuandongZhao/Unigram-Watermark},
+  eprint    = {https://arxiv.org/abs/2306.17439},
+  owner     = {lilei.02},
+}
+
+@InProceedings{jain2024where,
+  author    = {Sameer Jain and Sedrick Scott Keh and Shova Chhetri and Karun Dewan and Pablo Izquierdo and Johanna Prussmann and Pooja Shrestha and César Suárez and Zheyuan Ryan Shi and Lei Li and Fei Fang},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Where It Really Matters: Few-Shot Environmental Conservation Media Monitoring for Low-Resource Languages},
+  year      = {2024},
+  month     = feb,
+}
+
 @InProceedings{dong2023statistical,
   author    = {Qingxiu Dong and Jingjing Xu and Lingpeng Kong and Zhifang Sui and Lei Li},
   booktitle = {the 37th Conference on Neural Information Processing Systems (NeurIPS)},
