--- a/leili.bib
+++ b/leili.bib
@@ -43,7 +43,7 @@
 }
 
 @InProceedings{wang2023learning,
-  author    = {Danqing Wang and and Lei Li},
+  author    = {Danqing Wang and Lei Li},
   booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
   title     = {Learning from Mistakes via Cooperative Study Assistant for Large Language Models},
   year      = {2023},
@@ -60,11 +60,12 @@
   year      = {2023},
   month     = dec,
   abstract  = {Automatically evaluating the quality of language generation is critical. Although recent learned metrics show high correlation with human judgement, these metrics can not explain their verdict or associate the scores with defects in generated text. To address this limitation, we present InstructScore, an explainable evaluation metric for text generation. By harnessing both explicit human instruction and the implicit knowledge of GPT-4, we fine-tune a text evaluation metric based on LLaMA, producing both a score for generated text and a human readable diagnostic report. We evaluate InstructScore on a variety of generation tasks, including translation, captioning, data-to-text and commonsense generation. Experiments show that our 7B model surpasses all other unsupervised metrics, including those based on 175B GPT-3 and GPT-4. Surprisingly, our InstructScore, even without direct supervision from human-rated data, achieves performance levels on par with state-of-the-art metrics like COMET22, which were fine-tuned on human ratings.},
+  code      = {https://github.com/xu1998hz/InstructScore_SEScore3},
   eprint    = {https://arxiv.org/abs/2305.14282},
 }
 
 @InProceedings{ouyang2023autoplan,
-  author    = {Siqi Ouyang and and Lei Li},
+  author    = {Siqi Ouyang and Lei Li},
   booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
   title     = {AutoPlan: Automatic Planning of Interactive Decision-Making Tasks With Large Language Models},
   year      = {2023},
